rustdocs/errors/rust-bitcoin-units-src-amount-result.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/amount/result.rs:10:5
   |
10 | use super::{Amount, SignedAmount};
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/amount/result.rs:5:5
  |
5 | use core::num::{NonZeroI64, NonZeroU64};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/amount/result.rs:6:5
  |
6 | use core::ops;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::internal_macros`
  --> ../rust-bitcoin/units/src/amount/result.rs:11:12
   |
11 | use crate::internal_macros::{
   |            ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`
   |
help: you might be missing a crate named `internal_macros`, add it to your project and import it in your code
   |
 5 + extern crate internal_macros;
   |

error[E0432]: unresolved import `crate::result`
  --> ../rust-bitcoin/units/src/amount/result.rs:14:12
   |
14 | use crate::result::{MathOp, NumOpError, NumOpResult, OptionExt};
   |            ^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::result`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
  --> ../rust-bitcoin/units/src/amount/result.rs:30:8
   |
30 | crate::internal_macros::impl_op_for_references! {
   |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
